Password recovery via email and improve user account management.

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,28 +1,29 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
+    <head>
+        <meta charset="UTF-8" />
+        <title>Login</title>
+    </head>
+    <body>
+        {% with messages = get_flashed_messages() %} {% if messages %}
         <ul>
             {% for message in messages %}
-                <li>{{ message }}</li>
+            <li>{{ message }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
-{% endwith %}
+        {% endif %} {% endwith %}
 
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit">Login</button>
-    </form>
-    <a href="/signup">Don't have an account? Sign up here.</a>
-</body>
+        <h1>Login</h1>
+        <form action="/login" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" /><br /><br />
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" /><br /><br />
+            <button type="submit">Login</button>
+        </form>
+        <a href="/signup">Don't have an account? Sign up here.</a><br /><br />
+        <a href="/request_password_reset"
+            >Don't remember your password? Change it here.</a
+        >
+    </body>
 </html>
