--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,30 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
-</head>
-<body>
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
+    <head>
+        <meta charset="UTF-8" />
+        <title>Sign Up</title>
+    </head>
+    <body>
+        {% with messages = get_flashed_messages() %} {% if messages %}
         <ul>
             {% for message in messages %}
-                <li>{{ message }}</li>
+            <li>{{ message }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
-{% endwith %}
+        {% endif %} {% endwith %}
 
-    <h1>Sign Up</h1>
-    <form action="/signup" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="display_name">Display Name:</label>
-        <input type="text" id="display_name" name="display_name"><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit">Sign Up</button>
-    </form>
-    <a href="/login">Already have an account? Log in here.</a>
-</body>
+        <h1>Sign Up</h1>
+        <form action="/signup" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" /><br /><br />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
+            <!-- New email field -->
+            <label for="display_name">Display Name:</label>
+            <input
+                type="text"
+                id="display_name"
+                name="display_name"
+            /><br /><br />
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" /><br /><br />
+            <button type="submit">Sign Up</button>
+        </form>
+        <a href="/login">Already have an account? Log in here.</a>
+    </body>
 </html>
