Category field added to the monsters table.

--- a/templates/admin/add_monster.html
+++ b/templates/admin/add_monster.html
@@ -31,6 +31,13 @@
                     name="flavour_profile"
                     required
                 /><br />
+                <label for="category">Category:</label><br />
+                <input
+                    type="text"
+                    id="category"
+                    name="category"
+                    required
+                /><br />
 
                 <label for="description">Description:</label><br />
                 <textarea
