--- a/templates/admin/edit_monster.html
+++ b/templates/admin/edit_monster.html
@@ -27,6 +27,14 @@
                 required
             /><br />
 
+            <label for="category">Category:</label>
+            <input
+                type="text"
+                name="category"
+                value="{{ monster.category }}"
+                required
+            /><br />
+
             <label for="image_url">Image URL:</label>
             <input
                 type="text"
